# FinSage

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  logging_config.py  main.py
backend/agents/: advanced_calculator.py  base_agent.py  benefits_discovery.py  compliance_checker.py  cross_border_tax.py  deduction_hunter.py  eligibility_verifier.py  income_classifier.py  itr_helper.py  price_intelligence.py  tax_agent.py  tax_optimizer.py  tax_strategy.py  tools.py  wealth_planner.py
backend/api/: auth.py  benefits.py  chat.py  compliance.py  knowledge.py  notifications.py  reports.py  websocket.py
backend/db/: orm_models.py  postgres.py  redis_client.py
backend/models/: __init__.py
backend/orchestrator/: __init__.py  advanced_orchestrator.py  agent_state.py  execution_nodes.py  graph.py  intent_detector.py  memory.py  response_generation.py  router_nodes.py
backend/rag/: document_loader.py  embeddings.py  retriever.py  vector_store.py
backend/security/: dependencies.py  jwt_handler.py  password.py
backend/services/: alert_service.py  document_service.py  health_scorer.py  india_tax_data_fetcher.py  notification.py  report_generator.py  scheduler.py
backend/tests/: test_advanced_calculator.py  test_benefits_and_eligibility.py  test_compliance.py  test_india_tax_data_fetcher.py  test_itr_helper.py  test_logging.py  test_new_agents.py  test_report_generator.py  test_services_layer.py  (+1 more)
docker/: Dockerfile.backend
frontend/: index.html  package-lock.json  package.json
(+33 files in other folders)
